--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -77,7 +77,7 @@ Mix and Connect</strong> with like-minded peers.
     <div class="container index-events">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-                <a class="btn-black" href="#" role="button">
+                <a class="btn-black" href="{% url 'main:events' %}" role="button">
                     <span class="glyphicon glyphicon-calendar"></span>Upcoming Community <strong>Meetups</strong>
                 </a>
                 <div class="index-events-content">
