various responsive style fixes

--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -5,7 +5,7 @@
 {% block title %}About OK!Thess{% endblock %}
 
 {% block content %}
-    <div class="container-fluid">
+    <div class="container-fluid about">
         <div class="row">
             <div class="col-md-9">
                 <div class="about-accordion">
