--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -7,34 +7,36 @@
     <div class="container index-land">
         <div class="row">
             <div class="col-md-5">
-                <h1>ΟΚ!Τhess</h1>
-                <h2>{% trans 'Your early stage partner' %}</h2>
-                <p class="desc">
-{% blocktrans %}OK!Thess provides space and technical support to teams of people
-with innovative ideas helping them to <strong>Validate a Business
-Model Fast</strong>, rather than hastily, and to <strong>Meet,
-Mix and Connect</strong> with like-minded peers.
-{% endblocktrans %}
-                </p>
-                <div id="mc_embed_signup">
-                    <form action="//okthess.us15.list-manage.com/subscribe/post?u=e5030558dd0a4f89aeed05a0d&amp;id=a3d8e08f2a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                        <div id="mc_embed_signup_scroll">
-                            <div class="mc-field-group">
-                                <input type="text" value="" name="FNAME" class="input-small" id="mce-FNAME" placeholder="First name">
+                <div class="index-land-content">
+                    <h1>ΟΚ!Τhess</h1>
+                    <h2>{% trans 'Your early stage partner' %}</h2>
+                    <p class="desc">
+    {% blocktrans %}OK!Thess provides space and technical support to teams of people
+    with innovative ideas helping them to <strong>Validate a Business
+    Model Fast</strong>, rather than hastily, and to <strong>Meet,
+    Mix and Connect</strong> with like-minded peers.
+    {% endblocktrans %}
+                    </p>
+                    <div id="mc_embed_signup">
+                        <form action="//okthess.us15.list-manage.com/subscribe/post?u=e5030558dd0a4f89aeed05a0d&amp;id=a3d8e08f2a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                            <div id="mc_embed_signup_scroll">
+                                <div class="mc-field-group">
+                                    <input type="text" value="" name="FNAME" class="input-small" id="mce-FNAME" placeholder="First name">
+                                </div>
+                                <div class="mc-field-group">
+                                    <input type="email" value="" name="EMAIL" class="input-small" id="mce-EMAIL" placeholder="Email">
+                                </div>
+                                <div id="mce-responses" class="clear">
+                                    <div class="response" id="mce-error-response" style="display:none"></div>
+                                    <div class="response" id="mce-success-response" style="display:none"></div>
+                                </div>
+                                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_e5030558dd0a4f89aeed05a0d_a3d8e08f2a" tabindex="-1" value=""></div>
+                                <div class="clear">
+                                    <input type="submit" value="Get in the loop!" name="subscribe" id="mc-embedded-subscribe" class="btn-yellow btn-small">
+                                </div>
                             </div>
-                            <div class="mc-field-group">
-                                <input type="email" value="" name="EMAIL" class="input-small" id="mce-EMAIL" placeholder="Email">
-                            </div>
-                            <div id="mce-responses" class="clear">
-                                <div class="response" id="mce-error-response" style="display:none"></div>
-                                <div class="response" id="mce-success-response" style="display:none"></div>
-                            </div>
-                            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_e5030558dd0a4f89aeed05a0d_a3d8e08f2a" tabindex="-1" value=""></div>
-                            <div class="clear">
-                                <input type="submit" value="Get in the loop!" name="subscribe" id="mc-embedded-subscribe" class="btn-yellow btn-small">
-                            </div>
-                        </div>
-                    </form>
+                        </form>
+                    </div>
                 </div>
             </div>
             <div class="col-md-7">
