--- a/main/templates/main/program-meetup.html
+++ b/main/templates/main/program-meetup.html
@@ -7,7 +7,7 @@
 {% block content %}
     <div class="container program">
         <div class="row">
-            <div class="col-md-10 col-md-offset-1">
+            <div class="col-md-10 col-md-offset-1 col-sm-12">
                 <div class="program-meetup">
                     <div class="program-meetup-jumbotron">
                         <h1>OK!Thess Meetup</h1>
@@ -22,7 +22,7 @@
                     </div>
                     <div class="program-meetup-content">
                         <div class="row">
-                            <div class="col-md-8">
+                            <div class="col-md-8 col-sm-8">
                                 <div class="program-meetup-content-body">
                                     <h2>Description</h2>
                                     <p>
@@ -32,7 +32,7 @@
                                     {% lorem 2 p %}
                                 </div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-4 col-sm-4">
                                 <div class="program-meetup-content-side">
                                     <div class="program-meetup-content-side-title">
                                         <i class="glyphicon glyphicon-console"></i>
