--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -341,10 +341,15 @@ address > abbr {
   line-height: 1.72rem;
   font-size: 12px;
   padding-left: 5px;
+  border: 1px solid #ddd;
 }
 
 .index-land {
   width: 90%;
+}
+
+.index-land-content {
+  margin-bottom: 50px;
 }
 
 .index-blog {
@@ -352,9 +357,13 @@ address > abbr {
   width: 100%;
   background: #f7f7f7;
   padding-top: 70px;
-  padding-bottom: 70px;
+  padding-bottom: 20px;
   padding-left: 5%;
   padding-right: 5%;
+}
+
+.index-blog-item {
+  margin-bottom: 50px;
 }
 
 .index-blog-item-para {
@@ -366,6 +375,12 @@ address > abbr {
   width: 300px;
   margin-top: 20px;
   margin-bottom: 20px;
+}
+
+@media (min-width: 768px) {
+  .index-blog-item-img > img {
+    width: 210px;
+  }
 }
 
 .index-blog-item-btn {
@@ -481,7 +496,7 @@ address > abbr {
   margin-bottom: 25px;
 }
 
-@media(max-width:991px) {
+@media (max-width: 991px) {
   #social img {
     height: 30px !important;
     margin-top: -32px;
@@ -489,7 +504,7 @@ address > abbr {
   }
 }
 
-@media(max-width:300px) {
+@media (max-width: 300px) {
   #social img {
     height: 25px !important;
     margin-top: -32px;
@@ -526,10 +541,24 @@ h5 {
 }
 
 .footer-content-item-img {
-  height: 70px;
+  max-height: 70px;
   width: auto;
   margin-right: 4px;
   margin-bottom: 50px;
+}
+
+@media (max-width: 380px) {
+  .footer-content-item-img {
+    max-width: 200px;
+    height: auto;
+  }
+}
+
+@media (max-width: 768px) {
+  .footer-content-item-img {
+    max-width: 200px;
+    height: auto;
+  }
 }
 
 .footer-content-author {
@@ -558,6 +587,18 @@ h5 {
 .blog-post-image {
   margin-top: 10px;
   max-width: 100%;
+}
+
+@media (min-width: 548px) {
+  .blog-post-image {
+    max-width: 50%;
+  }
+}
+
+@media (min-width: 992px) {
+  .blog-post-image {
+    max-width: 100%;
+  }
 }
 
 .blog-post-teaser > p {
@@ -594,10 +635,16 @@ h6.blog-post-meta {
 }
 
 .post-content-image {
-  width: 300px;
-  float: left;
+  width: 80%;
   padding-right: 20px;
   padding-bottom: 20px;
+}
+
+@media (min-width: 768px) {
+  .post-content-image {
+    width: 300px;
+    float: left;
+  }
 }
 
 .post-content-body-meta {
@@ -690,13 +737,28 @@ ul.share-buttons img{
 }
 
 /* about */
+.about {
+  width: 90%;
+}
+
 .about-accordion {
-  margin-left: 6%;
   margin-top: 10px;
 }
 
 .about-sidebar {
   margin-right: 20%;
+}
+
+@media (min-width: 992px) {
+  .about-sidebar {
+    margin-right: 0;
+  }
+}
+
+@media (min-width: 1200px) {
+  .about-sidebar {
+    margin-right: 20%;
+  }
 }
 
 button.accordion {
@@ -867,6 +929,12 @@ button.accordion.active:after {
   height: 100px;
 }
 
+@media (max-width: 767px) {
+  .program-sidebar {
+    margin-top: 40px;
+  }
+}
+
 .program-sidebar-meetup {
   padding-left: 20px;
   padding-right: 20px;
@@ -959,6 +1027,13 @@ button.accordion.active:after {
 .program-meetup {
   padding-left: 60px;
   padding-right: 60px;
+}
+
+@media (max-width: 768px) {
+  .program-meetup {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 .program-meetup-jumbotron {
