change meetup url

--- a/main/templates/main/events.html
+++ b/main/templates/main/events.html
@@ -38,7 +38,7 @@
             </div>
             <div class="col-md-3">
                 <div class="program-sidebar-meetup">
-                    <a href="{% url 'main:program_meetup' %}">
+                    <a href="{% url 'main:meetup' %}">
                         <h4>
                             OK!Thess Meetup
                             <i class="glyphicon glyphicon-console"></i>
