--- a/main/templates/main/program-teams.html
+++ b/main/templates/main/program-teams.html
@@ -9,12 +9,12 @@
         <div class="row">
             <div class="col-sm-9">
                 <div class="program-main">
-                    <h1>Hosted Teams</h1>
                     <div class="row">
                         <div class="col-md-12">
+                            <h1>Hosted Teams</h1>
                             <div class="program-main-filter">
                                 <button class="btn-simple" id="industry-filter">
-                                    Filter industry
+                                    Filter by industry
                                     <i class="glyphicon glyphicon-th"></i>
                                 </button>
                                 <div class="program-main-filter-industries hidden" id="industry-filter-container">
@@ -36,18 +36,6 @@
             </div>
             <div class="col-sm-3">
                 <div class="program-sidebar">
-                    <div class="program-sidebar-meetup">
-                        <a href="{% url 'main:program_meetup' %}">
-                            <h4>
-                                OK!Thess Meetup
-                                <i class="glyphicon glyphicon-console"></i>
-                            </h4>
-                            <div class="program-sidebar-meetup-content">
-                                The meetup of OK!Thess is the new thing in town.
-                                Click here to learn more
-                            </div>
-                        </a>
-                    </div>
                     <div class="program-sidebar-about">
                         <h4>About</h4>
                         <div class="program-sidebar-box">
