--- a/main/templates/main/events.html
+++ b/main/templates/main/events.html
@@ -44,14 +44,13 @@
                             <i class="glyphicon glyphicon-console"></i>
                         </h4>
                         <div class="program-sidebar-meetup-content">
-                            The meetup of OK!Thess is the new thing in town.
-                            Click here to learn more
+                            {% trans 'The meetup of OK!Thess is the new thing in town. Click here to learn more' %}
                         </div>
                     </a>
                 </div>
                 <div style="margin-bottom: 30px;"></div>
 
-                <h3>Hosted Meetups</h3>
+                <h3>{% trans 'Hosted Meetups' %}</h3>
                 <div class="sidebar-module sidebar-module-inset sidebar-meetups">
                     <ul>
                         {% for meetup in meetups %}
@@ -60,7 +59,7 @@
                     </ul>
                 </div>
 
-                <h3>Past Events</h3>
+                <h3>{% trans 'Past Events' %}</h3>
                 <div class="sidebar-module">
                     {% for year, year_obj in events_archive.items %}
                         <h5>{{ year }}</h5>
