--- a/main/templates/main/program-mentors.html
+++ b/main/templates/main/program-mentors.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-md-9">
                 <div class="program-main">
-                    <h1>Mentors</h1>
+                    <h1>{% trans 'Mentors' %}</h1>
                     <div style="margin-bottom: 40px;"></div>
                     <div class="row">
                         {% for mentor in mentors_list %}
@@ -38,17 +38,19 @@
             <div class="col-md-3">
                 <div class="program-sidebar">
                     <div class="program-sidebar-about">
-                        <h4>How you can be a mentor</h4>
+                        <h4>{% trans 'How you can be a mentor' %}</h4>
                         <div class="program-sidebar-box">
-                            {% lorem 1 p %}
+{% blocktrans %}
+program mentors sidebar how to be a mentor
+{% endblocktrans %}
                         </div>
                         <br>
                     </div>
                     <div class="program-sidebar-tabs">
                         <ul class="nav nav-pills nav-stacked program-sidebar-tabs-list">
-                            <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_teams' %}">Teams</a></li>
-                            <li class="program-sidebar-tabs-elem active"><a href="{% url 'main:program_mentors' %}">Mentors</a></li>
-                            <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_alumni' %}">Alumni</a></li>
+                            <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_teams' %}">{% trans 'Teams' %}</a></li>
+                            <li class="program-sidebar-tabs-elem active"><a href="{% url 'main:program_mentors' %}">{% trans 'Mentors' %}</a></li>
+                            <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_alumni' %}">{% trans 'Alumni' %}</a></li>
                         </ul>
                     </div>
                 </div>
