update all templates with i18n loader and strings

--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -1,6 +1,7 @@
 {% extends 'main/layout.html' %}
 
 {% load static %}
+{% load i18n %}
 
 {% block title %}About OK!Thess{% endblock %}
 
@@ -9,150 +10,28 @@
         <div class="row">
             <div class="col-md-9">
                 <div class="about-accordion">
-                    <button class="accordion" id="what">{% trans 'Τι κάνουμε' %}</button>
+                    <button class="accordion" id="what">{% trans 'What we do' %}</button>
                     <div class="panel">
                         <div class="panel-inner">
-{% blocktrans %}<p>
-Ο ευρύς στόχος του OK!Thess είναι η ουσιώδης συμβολή στην δημιουργία ενός οικοσυστήματος καινοτομίας. Ένα
-τέτοιο οικοσύστημα θα περιλάμβανε αφ’ ενός όλους όσους είναι σε θέση και επιθυμούν να συμβάλλουν στην
-ανάπτυξη της καινοτομίας στην πόλη και αφ’ ετέρου όλες τις λειτουργίες που είναι απαραίτητες για την
-υγιή μεγέθυνση του οικοσυστήματος του ίδιου. Ένα τέτοιο οικοσύστημα θα περιλάμβανε τα εξής:</p>
-<ul>
-<li>
-<strong>Πηγές ανθρώπων με υποσχόμενες καινοτόμες ιδέες:</strong> Τέτοιες πηγές είναι τα πανεπιστήμια
-και τα ΤΕΙ αλλά και η κοινωνία γενικότερα καθώς λαμπρές ιδέες μπορούν να ξεκινήσουν από οπουδήποτε.
-</li>
-<li>
-<strong>Διαδικασίες που συμβάλλουν στην μετατροπή πρωτόλειων ιδεών σε βιώσιμες προτάσεις:</strong> Αυτές
-μπορεί να περιλαμβάνουν συμβουλευτική, διαλέξεις, διαγωνισμούς, κατάρτιση, συναναστροφές και δημιουργία
-καινοτόμων κοινοτήτων και ό,τι άλλο συμβάλλει με αυτό τον τρόπο.
-</li>
-<li>
-<strong>Υποδομές:</strong> Αυτές θα στηρίξουν διαδικασίες όπως αυτές που περιγράφηκαν αλλά και θα δώσουν
-την δυνατότητα σε νεοφυείς οντότητες να «δοκιμαστούν» και πολλές από αυτές να «επιζήσουν» πριν καταλήξουν,
-έτοιμες, σε κάποιον από τους προορισμούς του οικοσυστήματος.
-</li>
-<li>
-<strong>Προορισμούς των δοκιμασμένων και υποσχόμενων νεοφυών οντοτήτων:</strong> Αυτοί οι προορισμοί
-περιλαμβάνουν κατά κύριο λόγο το πάντρεμα των καλυτέρων ιδεών με επενδυτικά κεφάλαια που θα αναπτυχθούν
-παραπάνω σε τεχνολογικά πάρκα, αλλά και αυτοτελώς.
-</li>
-</ul>
-<br>
-<p>Το οικοσύστημα αυτό θα είναι ανοικτό σε όλους τους επιχειρηματικούς και εκπαιδευτικούς φορείς της πόλης για
-να εγκολπώσει όλες τις προσπάθειες που κινούνται στην κατεύθυνση της καινοτομίας και της επιχειρηματικότητας.
-Για την στήριξη του οικοσυστήματος, θα δημιουργηθούν συνθήκες χώρου και υπηρεσιών που να επιτρέπουν σε
-έναν αριθμό οντοτήτων με νέες και δυνητικά εμπορεύσιμες επιχειρηματικές ιδέες – είτε προϊόντα έρευνας
-είτε όχι – να τις επεξεργαστούν για ένα διάστημα απαλλαγμένες από άλλα βάρη στην προσπάθεια τους.</p>
-<br>
-<p>
-<strong>
-Η προσπάθεια υλοποίησης του στόχου ξεκινάει με το άνοιγμα της προ-θερμοκοιτίδας του
-OK!Thess, η οποία προσφέρει τις παρακάτω υπηρεσίες:
-</strong>
-</p>
-<ul>
-<li>Διάθεση χώρου που να μπορεί να συναντιέται και να συνεργάζεται μια ομάδα έως 5 ατόμων.</li>
-<li>Πρόσβαση σε δίκτυο Wi-Fi υψηλής ταχύτητας.</li>
-<li>Συμμετοχή σε σεμινάρια και διαλέξεις σχετικά με την καινοτομία στον χώρο του ΟΚ!Thess.</li>
-<li>Καθημερινή δυνατότητα καθοδήγησης από έναν coach εξειδικευμένο σε θέματα startups.</li>
-<li>Στήριξη από έναν μέντορα του οικονομικού χώρου όπου δραστηριοποιείται η startup ή δυνητική startup.</li>
-<li>Χώρο κοινωνικής συναναστροφής με άλλες ομάδες που συστεγάζονται.</li>
-<li>Ευκαιρίες συνάντησης με δυνητικούς επενδυτές.</li>
-</ul>
-{% endblocktrans %}
+                            {{ about_texts.what_text|safe }}
                         </div>
                     </div>
-                    <button class="accordion" id="how">{% trans 'Πως το κάνουμε' %}</button>
+                    <button class="accordion" id="how">{% trans 'How we do it' %}</button>
                     <div class="panel">
                         <div class="panel-inner">
-{% blocktrans %}<h4><strong>Σύνδεση ομάδων με Μέντορες</strong></h4>
-<p>
-Σε ετήσια βάση προβλέπεται η διεξαγωγή 30 συναντήσεων τέτοιου είδους οι οποίες στοχεύουν στην υιοθέτηση νεοφυών
-οµάδων από µέντορες. Ως Mentoring ορίζεται η συχνή διάδραση των ομάδων του οικοσυστήματος με ανθρώπους
-που φέρουν εξειδικευμένη εμπειρία της αγοράς στόχου της ομάδας που έχουν αναλάβει. Μέσα απο την συναναστροφή
-με τους μέντορες, η ομάδα ωριμάζει και ιδανικά αποφεύγει καταστάσεις που καθυστερούνε την επίτευξη στόχων
-και οροσήμων κατά την επιχειρηματική της ανάπτυξη.
-</p>
-<br>
-<h4><strong>Συνεργατικές τεχνικές συναντήσεις</strong></h4>
-<p>
-Το OK!Thess θα απευθυνθεί στο ευρύτερο οικοσύστηµα της περιοχής και θα συνεργαστεί µε φορείς εξειδικευµένης
-θεµατολογίας ή / και γεωγραφικής εµβέλειας. Με αυτό το σκεπτικό, προβλέπεται η συνδιοργάνωση διαφόρων
-τύπων εκδηλώσεων (boot camps, speed dating events κλπ). Προβλέπεται η συνδιοργάνωση 6 εκδηλώσεων σε ετήσια
-βάση.
-</p>
-<br>
-<h4><strong>Εκδηλώσεις ποικίλου χαρακτήρα</strong></h4>
-<p>
-Το όλο οικοσύστηµα καινοτοµίας που δηµιουργείται µε επίκεντρο το OK!Thess πλαισιώνεται από σειρά εκδηλώσεων:
-επιστηµονικού χαρακτήρα µε προσκεκληµένους διακεκριµένους οµιλητές διεθνούς φήµης, validation events
-διαδραστικού χαρακτήρα εκδηλώσεις όπου το κοινό συµµετέχει δίνοντας πολύτιµη ανάδραση στους διοργανωτές,
-demo days εκδηλώσεις που δίνουν την ευκαιρία σε νεοφυείς οµάδες να προσεγγίσουν επενδυτές. Συνολικά προβλέπεται
-η διοργάνωση 10 εκδηλώσεων ποικίλου χαρακτήρα σε ετήσια βάση.
-</p>
-{% endblocktrans %}
-</div>
-                    </div>
-                    <button class="accordion" id="participate">{% trans 'Πως συμμετέχω' %}</button>
-                    <div class="panel">
-                        <div class="panel-inner">
-{% blocktrans %}<p>
-Γίνονται δεκτές προτάσεις από άτομα ή ομάδες με καινοτόμες ιδέες, ανεξάρτητα του βαθμού ωρίμανσης, που θα
-ήθελαν να ωφεληθούν από τις υπηρεσίες της προ-θερμοκοιτίδας του OK!Thess ώστε να στήσουν μια επιχείρηση
-(startup) ή να ενισχύσουν μια startup που έχουν ήδη στήσει.
-</p>
-<br>
-<p>
-Οι αιτήσεις συμμετοχής αξιολογούνται από τετραμελή επιτροπή η οποία αν χρειαστεί θα ζητήσει την αρωγή εμπειρογνωμόνων
-στον τομέα του αιτούντος. Τα κριτήρια στα οποία θα βασιστεί η απόφαση της επιτροπής κατά σειρά σπουδαιότητας
-είναι:
-</p>
-<br>
-<ul>
-<li><strong>Η επιχειρηματική ιδέα -</strong> Οι προοπτικές της ιδέας, άμεσα ή έμμεσα, να δημιουργήσει θέσεις
-εργασίας σε περίπτωση επιτυχίας, η εμπορευσιμότητα της ιδέας, η πρωτοτυπία / καινοτομία της επιχειρηματικής
-ιδέας, το πόσο εφικτή είναι η υλοποίησή της – λαμβάνοντας υπ' όψιν τα χαρακτηριστικά της αγοράς (μεγάλη/μικρή)
-και του ανταγωνισμού (μεγάλος/μικρός), η ανάγκη της αγοράς στην οποία ανταποκρίνεται, ο στόχος στην
-αγορά, η προστιθέμενη αξία, η σαφήνεια και ο βαθμός ωριμότητας της ιδέας</li>
-<li><strong>Τα προσόντα της ομάδας -</strong> Το επίπεδο εκπαίδευσης και η συνάφεια των σπουδών με την επιχειρηματική
-ιδέα, η προηγούμενη επιχειρηματική εμπειρία, η συνάφεια της επιχειρηματικής εμπειρίας με την επιχειρηματική
-ιδέα, η εμπειρία σε έρευνα και ανάπτυξη, η δομή της ομάδας</li>
-<li><strong>Το επιχειρηματικό σχέδιο</strong></li>
-</ul>
-<br>
-<p>
-Όσον αφορά το επιχειρηματικό σχέδιο, δεν είναι υποχρεωτικό να κατατεθεί στην αίτηση και η απουσία του δεν
-θα επηρεάσει αρνητικά την αίτηση, καθώς ένας από τους στόχους της εισαγωγής στο OK!Thess είναι η δημιουργία
-του. Εάν όμως κατατεθεί μπορεί να επηρεάσει θετικά.
-</p>
-<br>
-<p>
-Η αποδοχή κάθε ομάδας γίνεται για ένα χρονικό διάστημα που προσδιορίζεται από την επιτροπή αξιολόγησης και
-εξαρτάται από τα χαρακτηριστικά της κάθε πρότασης. Όλες οι ομάδες που γίνανε δεκτές αξιολογούνται για
-την πρόοδο τους κάθε τρεις μήνες. Σε περίπτωση που αυτή η αξιολόγηση δείχνει πως οι στόχοι της ομάδας
-δεν είναι επιτεύξιμοι τότε η συμφωνία συμμετοχής στο ΟΚ!Thess διακόπτεται ώστε οι διαθέσιμοι πόροι να
-διατεθούν σε νέες ομάδες.
-</p>
-<br>
-<p>
-Κάθε ομάδα που γίνεται δεκτή στο ΟΚ!Τhess, πληρώνει προκαταβολικά €150 για κάθε τριμηνία και για τις υπηρεσίες
-που αναφέρονται παραπάνω. Άλλες υπηρεσίες, όπως εξειδικευμένη κατάρτιση μπορεί να έχει πρόσθετη χρέωση.
-</p>
-{% endblocktrans %}
+                            {{ about_texts.how_text|safe }}
                         </div>
                     </div>
-                    <button class="accordion" id="coworking">{% trans 'Συνεργατικός χώρος' %}</button>
+                    <button class="accordion" id="participate">{% trans 'How I can participate' %}</button>
                     <div class="panel">
                         <div class="panel-inner">
-{% blocktrans %}<p>Ο χώρος παρέχει ένα σύγχρονο εργασιακό περιβάλλον με μεγάλες δυνατότητες λειτουργικής διαμόρφωσης ώστε να
-προσαρμόζεται στις εκάστοτε απαιτήσεις.
-</p>
-<p>Παράλληλα παρέχονται όλες οι σύγχρονες υποδοµές (δίκτυο υψηλών ταχυτήτων, τραπέζια εργασίας, χώροι συναντήσεων
-- συνεργασίας, χώροι εστίασης έως και αναψυχής κλπ) σε έναν χώρο µε minimal αισθητική που µπορεί εύκολα
-να µεταµορφώνεται ανάλογα µε τις απαιτήσεις και τις ιδιαιτερότητες της εκάστοτε δράσης που υλοποιείται.
-</p>
-{% endblocktrans %}
+                            {{ about_texts.how_text|safe }}
+                        </div>
+                    </div>
+                    <button class="accordion" id="coworking">{% trans 'Coworking space' %}</button>
+                    <div class="panel">
+                        <div class="panel-inner">
+                            {{ about_texts.coworking_text|safe }}
                         </div>
                     </div>
                 </div>
@@ -160,7 +39,9 @@ demo days εκδηλώσεις που δίνουν την ευκαιρία σε 
             <div class="col-md-3">
                 <div class="about-sidebar">
                     <h3>{% trans 'About' %}</h3>
-                    {% trans 'about page sidebar' %}
+                    <div>
+                        {% trans 'about page sidebar' %}
+                    </div>
                 </div>
             </div>
         </div>
