--- a/main/templates/main/blog-archive.html
+++ b/main/templates/main/blog-archive.html
@@ -1,6 +1,7 @@
 {% extends 'main/layout.html' %}
 
 {% load static %}
+{% load i18n %}
 
 {% block title %}Posts from {{ archive_year }} | OK!Thess blog{% endblock %}
 
