--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -1,6 +1,7 @@
 {% extends 'main/layout.html' %}
 
 {% load static %}
+{% load i18n %}
 
 {% block title %}Contact us | OK!Thess{% endblock %}
 
@@ -26,8 +27,9 @@
             <div class="col-md-6">
 {% blocktrans %}<address>
 <abbr title="Thessaloniki's Innovation Ecosystem">OK!THESS</abbr><br>
-<small>Address:</small> Κομοτηνής 2, 54655<br>
-<small>Entrance from:</small> Kidonion &amp; Maria Kallas<br>Thessaloniki, Greece.
+<small>Address:</small> Komotinis 2, 54655<br>
+<small>Entrance from:</small> Kidonion &amp; Maria Kallas
+<br>Thessaloniki, Greece.
 </address>
 {% endblocktrans %}
                 <h3>{% trans 'Email us' %}</h3>
