--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -73,7 +73,7 @@
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">{% trans 'About' %} <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li><a tabindex="-1" href="{% url 'main:about' %}#what">{% trans 'What we do' %}</a></li>
-                        <li><a tabindex="-1" href="{% url 'main:about' %}#how">{% trans 'How do we do it?' %}</a></li>
+                        <li><a tabindex="-1" href="{% url 'main:about' %}#how">{% trans 'How we do it' %}</a></li>
                         <li><a tabindex="-1" href="{% url 'main:about' %}#participate">{% trans 'How do I participate?' %}</a></li>
                         <li><a tabindex="-1" href="{% url 'main:about' %}#coworking">{% trans 'Coworking space' %}</a></li>
                    </ul>
