--- a/main/templates/main/program-teams.html
+++ b/main/templates/main/program-teams.html
@@ -1,6 +1,7 @@
 {% extends 'main/layout.html' %}
 
 {% load static %}
+{% load i18n %}
 
 {% block title %}Teams | OK!Thess{% endblock %}
 
@@ -36,6 +37,13 @@
             </div>
             <div class="col-sm-3">
                 <div class="program-sidebar">
+                    <div class="program-sidebar-tabs">
+                        <ul class="nav nav-pills nav-stacked program-sidebar-tabs-list">
+                            <li class="program-sidebar-tabs-elem active"><a href="{% url 'main:program_teams' %}">{% trans 'Teams' %}</a></li>
+                            <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_mentors' %}">{% trans 'Mentors' %}</a></li>
+                            <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_alumni' %}">{% trans 'Alumni' %}</a></li>
+                        </ul>
+                    </div>
                     <div class="program-sidebar-about">
                         <h4>{% trans 'About' %}</h4>
                         <div class="program-sidebar-box">
@@ -44,13 +52,6 @@ program about sidebar description
 {% endblocktrans %}
                         </div>
                         <br>
-                    </div>
-                    <div class="program-sidebar-tabs">
-                        <ul class="nav nav-pills nav-stacked program-sidebar-tabs-list">
-                            <li class="program-sidebar-tabs-elem active"><a href="{% url 'main:program_teams' %}">{% trans 'Teams' %}</a></li>
-                            <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_mentors' %}">{% trans 'Mentors' %}</a></li>
-                            <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_alumni' %}">{% trans 'Alumni' %}</a></li>
-                        </ul>
                     </div>
                     <div class="program-sidebar-regulation">
                         <div class="separator"></div>
